<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/login_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="35sp"
        android:text="@string/log_in_account"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_below="@+id/login_title_text"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_address"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_below="@+id/email_edittext"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_below="@+id/password_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:text="@string/log_in"
        android:background="@color/colorAccent"
        android:fontFamily="cursive"/>


    <TextView
        android:id="@+id/signup_text"
        android:layout_below="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding = "10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_an_account"
        android:textSize="20sp"
        android:textColor="#FA1D6A"
        android:textStyle="bold"
        android:fontFamily="cursive"/>

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/signup_text"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:visibility="gone" />

</RelativeLayout>