<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/settings_profilepic_cardview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/settings_profilepic_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/example_image" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/settings_username_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_profilepic_cardview"
            android:fontFamily="@font/aclonica"
            android:hint="@string/username"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/settings_name_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_username_textview"
            android:fontFamily="cursive"
            android:hint="@string/name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/settings_email_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_name_textview"
            android:fontFamily="@font/advent_pro_bold"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/settings_signout_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_email_textview"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:padding="10dp"
            android:text="@string/signout"
            android:textColor="#FA1D6A"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/settings_goback_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_baseline_keyboard_backspace_24" />

    <ImageButton
        android:id="@+id/settings_editUserDetails_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>